--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,12 +1,113 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2025-02-09 14:06:26 +0000 
+%% Created for Tuomas Eerola at 2025-02-09 16:16:09 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{zentner2008emotions,
+	author = {Zentner, Marcel and Grandjean, Didier and Scherer, Klaus R},
+	date-added = {2025-02-09 15:37:34 +0000},
+	date-modified = {2025-02-09 15:37:34 +0000},
+	journal = {Emotion},
+	keywords = {GEMS},
+	number = {4},
+	pages = {494-521},
+	publisher = {American Psychological Association},
+	title = {Emotions evoked by the sound of music: characterization, classification, and measurement.},
+	volume = {8},
+	year = {2008}}
+
+@inproceedings{deng2009imagenet,
+	author = {Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and {Fei-Fei}, Li},
+	booktitle = {2009 {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+	date-added = {2025-02-09 15:36:37 +0000},
+	date-modified = {2025-02-09 15:36:37 +0000},
+	pages = {248--255},
+	publisher = {Ieee},
+	title = {Imagenet: {{A}} Large-Scale Hierarchical Image Database},
+	year = {2009}}
+
+@article{krishna2017visual,
+	author = {Krishna, Ranjay and Zhu, Yuke and Groth, Oliver and Johnson, Justin and Hata, Kenji and Kravitz, Joshua and Chen, Stephanie and Kalantidis, Yannis and Li, Li-Jia and Shamma, David A and others},
+	date-added = {2025-02-09 15:36:14 +0000},
+	date-modified = {2025-02-09 15:36:14 +0000},
+	journal = {International Journal of Computer Vision},
+	pages = {32--73},
+	publisher = {Springer},
+	title = {Visual Genome: {{Connecting}} Language and Vision Using Crowdsourced Dense Image Annotations},
+	volume = {123},
+	year = {2017}}
+
+@article{hashem2023,
+	abstract = {The speech emotion recognition (SER) field has been active since it became a crucial feature in advanced Human--Computer Interaction (HCI), and wide real-life applications use it. In recent years, numerous SER systems have been covered by researchers, including the availability of appropriate emotional databases, selecting robustness features, and applying suitable classifiers using Machine Learning (ML) and Deep Learning (DL). Deep models proved to perform more accurately for SER than conventional ML techniques. Nevertheless, SER is yet challenging for classification where to separate similar emotional patterns; it needs a highly discriminative feature representation. For this purpose, this survey aims to critically analyze what is being done in this field of research in light of previous studies that aim to recognize emotions using speech audio in different aspects and review the current state of SER using DL. Through a systematic literature review whereby searching selected keywords from 2012--2022, 96 papers were extracted and covered the most current findings and directions. Specifically, we covered the database (acted, evoked, and natural) and features (prosodic, spectral, voice quality, and teager energy operator), the necessary preprocessing steps. Furthermore, different DL models and their performance are examined in depth. Based on our review, we also suggested SER aspects that could be considered in the future.},
+	author = {Hashem, Ahlam and Arif, Muhammad and Alghamdi, Manal},
+	date-added = {2025-02-09 15:33:02 +0000},
+	date-modified = {2025-02-09 15:33:32 +0000},
+	doi = {10.1016/j.specom.2023.102974},
+	file = {/Users/lqbn73/Zotero/storage/IG6XPA9V/S0167639323001085.html},
+	issn = {0167-6393},
+	journal = {Speech Communication},
+	keywords = {Classification of emotion,Emotional speech database,Speech emotion recognition,Speech features,Systematic review},
+	month = oct,
+	pages = {102974},
+	shorttitle = {Speech Emotion Recognition Approaches},
+	title = {Speech Emotion Recognition Approaches: {{A}} Systematic Review},
+	urldate = {2024-09-13},
+	volume = {154},
+	year = {2023}}
+
+@article{krumhuber2017,
+	abstract = {Temporal dynamics have been increasingly recognized as an important component of facial expressions. With the need for appropriate stimuli in research and application, a range of databases of dynamic facial stimuli has been developed. The present article reviews the existing corpora and describes the key dimensions and properties of the available sets. This includes a discussion of conceptual features in terms of thematic issues in dataset construction as well as practical features which are of applied interest to stimulus usage. To identify the most influential sets, we further examine their citation rates and usage frequencies in existing studies. General limitations and implications for emotion research are noted and future directions for stimulus generation are outlined.},
+	author = {Krumhuber, Eva G. and Skora, Lina and K{\"u}ster, Dennis and Fou, Linyun},
+	date-added = {2025-02-09 15:32:28 +0000},
+	date-modified = {2025-02-09 15:33:46 +0000},
+	doi = {10.1177/1754073916670022},
+	file = {/Users/lqbn73/Zotero/storage/PSMP9SIM/Krumhuber et al. - 2017 - A Review of Dynamic Datasets for Facial Expression Research.pdf},
+	issn = {1754-0739},
+	journal = {Emotion Review},
+	langid = {english},
+	month = jul,
+	number = {3},
+	pages = {280--292},
+	publisher = {SAGE Publications},
+	title = {A Review of Dynamic Datasets for Facial Expression Research},
+	urldate = {2024-09-13},
+	volume = {9},
+	year = {2017}}
+
+@article{bornDiversifyingMIRKnowledge2020,
+	author = {Born, Georgina},
+	copyright = {http://creativecommons.org/licenses/by/4.0},
+	date-added = {2025-02-09 15:24:20 +0000},
+	date-modified = {2025-02-09 15:24:20 +0000},
+	doi = {10.5334/tismir.58},
+	file = {/Users/lqbn73/Zotero/storage/GHPHG6Z2/Born - 2020 - Diversifying MIR Knowledge and Real-World Challenges, and New Interdisciplinary Futures.pdf},
+	issn = {2514-3298},
+	journal = {Transactions of the International Society for Music Information Retrieval},
+	langid = {english},
+	month = oct,
+	number = {1},
+	pages = {193--204},
+	shorttitle = {Diversifying {{MIR}}},
+	title = {Diversifying {{MIR}}: Knowledge and Real-World Challenges, and New Interdisciplinary Futures},
+	urldate = {2024-09-11},
+	volume = {3},
+	year = {2020}}
+
+@inproceedings{lartillot2007matlab,
+	author = {Lartillot, Olivier and Toiviainen, Petri},
+	booktitle = {International conference on digital audio effects},
+	date-added = {2025-02-09 14:50:58 +0000},
+	date-modified = {2025-02-09 14:50:58 +0000},
+	organization = {Bordeaux},
+	pages = {244},
+	title = {A Matlab toolbox for musical feature extraction from audio},
+	volume = {237},
+	year = {2007}}
 
 @inproceedings{trohidis2008multi,
 	author = {Trohidis, Konstantinos and Tsoumakas, Grigorios and Kalliris, George and Vlahavas, Ioannis P and others},
@@ -136,8 +237,9 @@
 
 @article{wang2022co,
 	author = {Wang, Xin and Wang, Li and Xie, Lingyun},
+	date-modified = {2025-02-09 14:31:22 +0000},
 	doi = {10.3390/app12125787},
-	journal = {Applied Sciences (Switzerland)},
+	journal = {Applied Sciences},
 	note = {Cited by: 7; All Open Access, Gold Open Access},
 	number = {12},
 	source = {scopus},
