--- a/analysis/preprocessing.qmd
+++ b/analysis/preprocessing.qmd
@@ -7,7 +7,7 @@ This assumes that the data has been parsed from the BibTeX files into table and 
 #| echo: false
 #| eval: true
 # Set parameters and libraries
-export_decision <- TRUE
+export_decision <- FALSE
 verbose <- FALSE
 require(here)
 library(stringr)
@@ -116,13 +116,15 @@ metaMER_results$studyREF <- str_to_sentence(metaMER_results$studyREF)
 #
 metaMER_results$model_id <- tolower(metaMER_results$model_id)
 metaMER_results$model_class_id <- 'Unclassified'
-metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'lr|lm|pls|mlr|pcr|logistic regression|2d model full|pentagon|gaussian process regression|sparse bayesian regression|variational bayesian regression|logistic regression|lda|rda|regularized discriminant analysis|reguliarized discriminant analysis|linear discriminant|quadratic discriminant')] <- 'Linear Methods' # Class name from Elements of Stat.."
+metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'lr|lm|pls|mlr|pcr|logistic regression|2d model full|pentagon|gaussian process regression|sparse bayesian regression|variational bayesian regression|logistic regression|lda|rda|regularized discriminant analysis|reguliarized discriminant analysis|linear discriminant|quadratic discriminant|polygonal')] <- 'Linear Methods' # Class name from Elements of Stat.."
 #metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'logistic regression|lda|rda|regularized discriminant analysis|reguliarized discriminant analysis')] <- 'Linear Classification'
-#metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'mars|gam')]<-'Additive Trees and Related Methods' #
-metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rbf|gmm|local|polynomial|polygonal|knn|mars|gam')]<-'Kernel Smoothing, Additive and KNN'
-#metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'adaboost|gradient')]<-'Boosting'
+#metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'mars|gam')]<-'Additive Trees and Related Methods' 
+
+# make sure nn gets classified before knn
 metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'nn|gru|lstm|ltsm|long short term memory|rprop|mcan')]<-'Neural Nets'
-metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'svm|svr|support vector regression|smoreg|smo ')]<-'Support Vector Machines'
+metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rbf|local|knn|mars|gam')]<-'Kernel Smoothing, Additive and KNN'
+#metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'adaboost|gradient')]<-'Boosting'
+metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'gmm|svm|svr|support vector regression|smoreg|smo ')]<-'Support Vector Machines'
 #metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'knn')]<-'Prototype methods'
 metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rf|extremely randomized tree regression|random forest|adaboost|gradient|tree|bag|boost')]<-'Tree-based Methods'
 #metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rf')]<-'Ensemble Learning'
@@ -336,10 +338,16 @@ quantile(R_studies$feature_n,c(0.333,0.666),na.rm = TRUE)
 quantile(R_studies$feature_n,c(0.25,0.500,0.750),na.rm = TRUE)
 quantile(R_studies$feature_n,c(0.1,0.500,0.90),na.rm = TRUE)
 
-R_studies$feature_n_categories <-cut(R_studies$feature_n,
-                                      breaks = c(0,18,260,
-                                                 14460),
-                                      labels = c("Feature n < 18","Feature n > 18 & < 260","Feature n > 260"))
+# R_studies$feature_n_categories <-cut(R_studies$feature_n,
+#                                       breaks = c(0,18,260,
+#                                                  14460),
+#                                       labels = c("Feature n < 18","Feature n > 18 & < 260","Feature n > 260"))
+
+R_studies$feature_n_complexity <- cut(R_studies$feature_n,
+                                      breaks = c(0,30,300,14460),
+                                      labels = c("Feature n < 30","Feature n > 30 & < 300","Feature n > 300"))
+
+
 
 ```
 
@@ -391,7 +399,7 @@ R_studies |>
 
 best_model_class <- best_model_class[,c("citekey", "dimension", "model_class_id")] 
 
-R_summary <- summarise(group_by(R_studies,dimension,citekey),valuesMean=mean(values,na.rm=TRUE),valuesMedian=median(values,na.rm=TRUE),valuesMax=max(values,na.rm=TRUE),stimulus_n=first(stimulus_n),studyREF=first(studyREF),feature_n=first(feature_n),journal_type=first(journal_type),feature_n=first(feature_n),feature_n_categories=first(feature_n_categories),stimulus_genre_mixed=first(stimulus_genre_mixed),feature_n_complexity_genre=first(feature_n_complexity_genre))
+R_summary <- summarise(group_by(R_studies,dimension,citekey),valuesMean=mean(values,na.rm=TRUE),valuesMedian=median(values,na.rm=TRUE),valuesMax=max(values,na.rm=TRUE),stimulus_n=first(stimulus_n),studyREF=first(studyREF),feature_n=first(feature_n),journal_type=first(journal_type),feature_n=first(feature_n),feature_n_complexity=first(feature_n_complexity),stimulus_genre_mixed=first(stimulus_genre_mixed),feature_n_complexity_genre=first(feature_n_complexity_genre))
 
 R_summary <- left_join(R_summary, best_model_class)
 
@@ -458,17 +466,12 @@ print(quantile(R_studies$feature_n,c(0.333,0.666),na.rm = T))
 #quantile(R_studies$feature_n,c(0.25,0.50,0.75),na.rm = T)
 
 # Assign
-R_studies$feature_n_complexity <- cut(R_studies$feature_n,
-                                      breaks = c(0,
-                                                 as.numeric(quantile(R_studies$feature_n,c(0.333),na.rm = T)),
-                                                 as.numeric(quantile(R_studies$feature_n,c(0.666),na.rm = T)),
-                                                 14460),
-                                      labels = c("Feature n < 236","Feature n > 236 & < 653","Feature n > 653"))
-
-
-R_studies$feature_n_complexity <- cut(R_studies$feature_n,
-                                      breaks = c(0,30,300,14460),
-                                      labels = c("Feature n < 30","Feature n > 30 & < 300","Feature n > 300"))
+# R_studies$feature_n_complexity <- cut(R_studies$feature_n,
+#                                       breaks = c(0,
+#                                                  as.numeric(quantile(R_studies$feature_n,c(0.333),na.rm = T)),
+#                                                  as.numeric(quantile(R_studies$feature_n,c(0.666),na.rm = T)),
+#                                                  14460),
+#                                       labels = c("Feature n < 236","Feature n > 236 & < 653","Feature n > 653"))
 
 #table(R_studies$feature_n_complexity)
 ```
